Global Exception Handling implemented

--- a/code/common/Hyper.Common.Web/Hyper.Common.Web.csproj
+++ b/code/common/Hyper.Common.Web/Hyper.Common.Web.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UluarSite.Common\UluarSite.Common.csproj" />
+    <ProjectReference Include="..\Hyper.Common\Hyper.Common.csproj" />
   </ItemGroup>
 
 </Project>
