Sh file is created

--- a/code/backend/Hyper.Backend.Web/Properties/launchSettings.json
+++ b/code/backend/Hyper.Backend.Web/Properties/launchSettings.json
@@ -19,7 +19,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
+    "Hyper.Bkh.Web.Dev": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
